internal/detect/testdata/namer_validator/invalid_signature/multiple_returns/go.mod
module testpkg

go 1.24
